# lfr-mock-gen

./: .gitignore  Cargo.toml  README.md
.gemini/: gemini.md
.github/workflows/: release.yml  rust.yml
src/: cli.rs  main.rs
src/core/: env.rs  mod.rs
src/utils/: git.rs  mod.rs
