[package]
name = "lfr-mock-gen"
version = "0.1.0"
edition = "2021"
authors = ["Peter Richards"]
description = "Liferay Mock Content Generator - Blazing-fast CLI tool using Gemini AI to generate realistic mock Web Content."

[dependencies]
# HTTP & Async
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"

# CLI Argument parsing
clap = { version = "4.4", features = ["derive"] }

# XML Processing
edit-xml = "0.1"

# Error handling
anyhow = "1.0"

# JSON Schema Validation
jsonschema = "0.17"

# Configuration & Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
dialoguer = "0.11"
sysinfo = "0.30"

[features]
default = []

[dev-dependencies]
tempfile = "3.8"
